Fixed layout shift

--- a/src/components/Deck/Deck.css
+++ b/src/components/Deck/Deck.css
@@ -4,4 +4,7 @@
     flex-wrap: wrap;
     place-content: center;
     gap: 10px;
+    width: 50%;
+    height: 200px;
+    margin: auto;
 }
